# homestretch-data

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CREDITS.md  LICENSE  LICENSE-DATA  README.md  pyproject.toml
.github/workflows/: ci.yml  notify-app.yml  scheduled-scrape.yml
data/: forms.json  games.json  sources.json  transfers.json
schemas/: form.schema.json  forms.schema.json  game.schema.json  games.schema.json  source.schema.json  sources.schema.json  transfer.schema.json  transfers.schema.json
scrapers/: CLAUDE.md  bulbapedia.py  evolution_details.py  method_details.py  pokeapi.py  utils.py
scripts/: check_dep_age.py  coverage_audit.py  export_schemas.py  seed_manual_sources.py  validate.py  validate_sprite_urls.py
src/homestretch_data/: __init__.py
src/homestretch_data/models/: __init__.py  form.py  game.py  source.py  transfer.py
tests/: conftest.py  test_bulbapedia_form_resolution.py  test_evolution_details.py  test_method_details.py  test_models.py
